agiliza_loco/tests/requests/snapshots/can_login_without_verify@auth_request.snap
---
source: tests/requests/auth.rs
expression: login_response.text()
---
"{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"email\":\"noverify_user@loco.com\",\"is_staff\":false,\"is_verified\":false,\"profile_image\":null}"
