agiliza_loco/tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"email\":\"verify_user@loco.com\",\"is_staff\":false,\"is_verified\":true,\"profile_image\":null}",
)
